@@ -150,8 +150,7 @@
     "fitter = CurveFitter(objective)\n",
     "\n",
     "# do an initial fit with differential evolution\n",
-    "with Callback(200) as c:\n",
-    "    res = fitter.fit('L-BFGS-B', callback=c)"
+    "res = fitter.fit('differential_evolution')"
    ]
   },
   {
