@@ -206,3 +206,4 @@ Details of changes made to refnx
 - reflect.choose_dq_type for finding out fastest mode of resolution smearing.
 - User can now select resolution smearing approach in ReflectModel. Choosing
   between 'pointwise' or 'constant'.
+- Add progress bar for Curvefitter.fit() (requires tqdm being installed).
